--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<title>Fortune Cookie Generator</title>
 	<head>
 		<meta charset="utf-8">
 		<title>Journal</title>
@@ -7,14 +8,16 @@
 	</head>
 	<body>
 
-		<button  id= "fortune-cookie-text" onclick="generateFortuneCookie()">
-		<h3>Make My Fortune</h3>
+		<button onclick="generateFortune()">
+			<h3>Make My Fortune</h3>
 		</button>
+			<div id="fortune-cookie-text">
 
-			<ul id="myList">
+			</div>
+
+			<div id="previous-fortunes">
 				
-			</ul>
-	
+			</div>
 	</body>
 	<script type="text/javascript" src="js/app.js"></script>
 </html>
