--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-		<button onclick="generateFortune()">
+		<button onclick="makeFortune()">
 			<h3>Make My Fortune</h3>
 		</button>
 			<div id="fortune-cookie-text">
